<resources>

    <!--
    ================================================================================================
    App Level String
    ================================================================================================
    -->
    <string name="app_name">CrownKart</string>
    <string name="crown_name">Crown</string>
    <string name="kart_name">Kart</string>
    <string name="fields_empty">Fields Can\'t be empty</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="terms_conditions">Terms and Conditions :</string>
    <string name="place_order">Place Order</string>
    <string name="category_name">Cate Name</string>
    <string name="order_id">Order Id</string>
    <string name="status">Status</string>
    <string name="date">Date</string>
    <string name="size">Size</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="edit">Edit</string>
    <string name="track">Track</string>
    <string name="enter_coupon_code">Enter coupon code</string>
    <string name="type_coupon_code_here">Type Coupon Code Here</string>
    <string name="apply">Apply</string>
    <string name="cashback">Cashback</string>
    <string name="order_summary">Order Summary</string>
    <string name="bag_total">Bag Total</string>
    <string name="order_total">Order Total</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="shipment_details">Shipment Details</string>
    <string name="signed_in_as">Signed in as:</string>
    <string name="login_id">Login Id</string>
    <string name="bag_summary">Bag Summary</string>
    <string name="add_new_address">+ Add New Address</string>

    <string name="star">*</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="landmark">Landmark</string>
    <string name="pincode">Pincode</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="phone">Phone</string>
    <string name="save_continue">Save and Continue</string>
    <string name="cancel">Cancel</string>


    <!--
    ================================================================================================
     Server Level String
    ================================================================================================
    -->
    <!--<string name="server_url">http://crownkart.com/crownKart/api/</string>-->
    <!--<string name="local_url">http://192.168.1.103/retro/crownkart.com/crownkart.com/api/</string>-->

    <!--
    ================================================================================================
    Font String
    ================================================================================================
    -->
    <string name="regular_sans">OpenSans-Regular.ttf</string>
    <string name="semibold_sans">OpenSans-Semibold.ttf</string>
    <string name="bold_sans">OpenSans-Bold.ttf</string>
    <string name="regular_glegoo">Glegoo-Regular.ttf</string>
    <string name="bold_glegoo">Glegoo-Bold.ttf</string>

    <!--
    ================================================================================================
    Splash Level String
    ================================================================================================
    -->
    <string name="app_crown_title">Crown</string>
    <string name="app_kart_title">Kart</string>
    <string name="fashion_title">For   Fashion  Lovers</string>

    <!--
    ================================================================================================
    Register Activity String
    ================================================================================================
    -->
    <string name="register_username">Username</string>
    <string name="register_mobile_number">Mobile Number</string>
    <string name="register_email">Email address</string>
    <string name="register_password">Password</string>
    <string name="register_mobile_error">Mobile number can\'t be less than 10 digits</string>

    <!--
    ================================================================================================
    Login Activity String
    ================================================================================================
    -->
    <string name="login_email">Email address</string>
    <string name="login_password">Password</string>
    <string name="error_password">Password</string>
    <string name="register_send_email">Please </string>
    <string name="register_name_empty">CrownKart</string>
    <string name="register_error_empty">CrownKart</string>
    <string name="register_mobile">CrownKart</string>
    <string name="login_details">Login Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <!--
    ================================================================================================
    Login Activity String
    ================================================================================================
    -->
    <string-array name="sizes">
        <item>XS</item>
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
        <item>2XL</item>
        <item>3XL</item>
    </string-array>
    <string-array name="quantity">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="fa_shopping_cart">&#xf07a;</string>


</resources>
