<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_cart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.innovative.crownkart.activities.ViewCartActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />


    <include layout="@layout/toolbar"
        android:id="@+id/view_cart_toolbar"/>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_place_order"
        android:layout_below="@+id/view_cart_toolbar"
        android:layout_marginBottom="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_view_cart_items"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp" />

            <com.innovative.crownkart.views.CustomTextView
                android:id="@+id/tv_enter_coupon_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rv_view_cart_items"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:maxLines="1"
                android:padding="10dp"
                android:text="@string/enter_coupon_code"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:font="@string/semibold_sans" />

            <LinearLayout
                android:id="@+id/enter_coupon_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_enter_coupon_code"
                android:orientation="horizontal"
                android:weightSum="1">

                <com.innovative.crownkart.views.CustomEditText
                    android:id="@+id/et_enter_coupon_code"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="0.9"
                    android:background="@drawable/view_cart_edit_text_background"
                    android:hint="@string/type_coupon_code_here"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textAllCaps="true"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:font="@string/regular_sans" />

                <com.innovative.crownkart.views.CustomButton
                    android:id="@+id/apply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:layout_toRightOf="@+id/et_enter_coupon_code"
                    android:layout_weight="0.1"
                    android:background="@drawable/button_rectangle_background"
                    android:padding="10dp"
                    android:imeOptions="actionDone"
                    android:text="@string/apply"
                    android:textColor="@color/white"
                    app:font="@string/regular_sans" />

            </LinearLayout>

            <com.innovative.crownkart.views.CustomTextView
                android:id="@+id/cashback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/enter_coupon_code"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/cashback"
                android:textStyle="bold" />

            <com.innovative.crownkart.views.CustomTextView
                android:id="@+id/tv_price_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/enter_coupon_code"
                android:layout_marginTop="10dp"
                android:drawableEnd="@mipmap/rupee"
                android:drawableRight="@mipmap/rupee"
                android:padding="10dp"
                android:text="0"
                android:textColor="@color/green"
                android:textStyle="bold"
                app:font="@string/semibold_sans" />

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/cashback"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/grey" />

            <com.innovative.crownkart.views.CustomTextView
                android:id="@+id/order_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cashback"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/order_summary"
                android:textAppearance="?android:textAppearanceMedium"
                app:font="@string/semibold_sans" />

            <com.innovative.crownkart.views.CustomTextView
                android:id="@+id/bag_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/order_summary"
                android:padding="10dp"
                android:text="@string/bag_total"
                android:textAppearance="?android:textAppearanceSmall"
                app:font="@string/semibold_sans" />

            <com.innovative.crownkart.views.CustomTextView
                android:id="@+id/tv_price_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/order_summary"
                android:drawableEnd="@mipmap/rupee"
                android:drawableRight="@mipmap/rupee"
                android:padding="10dp"
                android:text="0"
                android:textColor="@color/green"
                android:textStyle="bold"
                app:font="@string/semibold_sans" />

            <View
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/bag_total"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/grey" />

            <com.innovative.crownkart.views.CustomTextView
                android:id="@+id/order_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line3"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/order_total"
                android:textAppearance="?android:textAppearanceMedium"
                app:font="@string/semibold_sans" />

            <com.innovative.crownkart.views.CustomTextView
                android:id="@+id/tv_price_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/line3"
                android:layout_marginTop="10dp"
                android:drawableEnd="@mipmap/rupee"
                android:drawableRight="@mipmap/rupee"
                android:padding="10dp"
                android:text="@string/price"
                android:textColor="@color/green"
                android:textStyle="bold"
                app:font="@string/semibold_sans" />


        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <com.innovative.crownkart.views.CustomButton
        android:id="@+id/btn_place_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rectangle_background"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:text="@string/place_order"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:font="@string/regular_sans" />


</RelativeLayout>
